--- a/public/css/home.css
+++ b/public/css/home.css
@@ -20,15 +20,22 @@
   --width-content-main-right: var(--width-content-main-left);
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", Arial, sans-serif;
+  background-color: var(--color-lighterYellow);
+}
+
 .color-medium-yellow {
   color: var(--color-mediumYellow);
 }
 
-#countdown {
-  color: var(--color-darkYellow);
-}
-
-#election-period {
+#countdown,
+#election-period,
+#time-left,
+.period,
+.election-name {
   color: var(--color-darkYellow);
 }
 
@@ -38,17 +45,22 @@
 }
 
 .content-main {
+  display: flex;
+  flex-direction: row;
   gap: 5rem;
   padding-bottom: 2.5%;
+  justify-content: center;
+  align-items: center;
 }
 
-.content-main-left {
+.content-main-left,
+.content-main-right {
   display: flex;
   flex-basis: var(--width-content-main-left);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-right: 2rem;
+  padding: 2rem;
 }
 
 .content-main-center {
@@ -57,16 +69,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid black; */
-}
-
-.content-main-right {
-  display: flex;
-  flex-basis: var(--width-content-main-right);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-left: 2rem;
 }
 
 .content-main-right img,
@@ -74,79 +76,35 @@
   width: 9rem;
 }
 
-.date-period {
-  color: var(--color-mediumYellow);
-}
-
-/* .content-main,
-.content-main-center,
-.content-main-left,
-.content-main-right {
-  border: 3px solid black;
-} */
-
-.content-main {
-  justify-content: center;
-  align-items: center;
-}
-
-#time-left {
-  color: var(--color-mediumYellow);
-}
-
-.period {
-  width: 100%;
-  color: var(--color-darkYellow);
-}
-
-.election-name {
-  color: var(--color-mediumYellow);
-}
-
-.bigger-text {
-  font-size: 1.5rem;
-}
-
 .main-container {
   text-align: justify;
   width: 66%;
-  /* padding-bottom: 2rem; */
 }
 
 .countdown-timer {
   display: flex;
+  flex-direction: row;
   justify-content: center;
-
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 2rem;
+  margin-bottom: 2rem;
 }
 
 .time-box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #f4ab2a;
+  color: var(--color-darkYellow);
   font-weight: bold;
-
-  /* background: radial-gradient(circle, #360606 50%, #4f0b09 50%); */
 }
 
 .time {
   font-size: 3.3rem;
   margin-bottom: 0.5em;
-  /* box-shadow: inset rgba(0, 0, 0, 0.3) 0px 0px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
-
   padding: 0em 0.5em;
   background: radial-gradient(circle, #390606 20%, var(--color-mediumRed) 110%);
   border-radius: 0.2em;
   width: 7.5rem;
 }
-
-/* .countdown-timer,
-.time-box,
-.time {
-  border: 1px solid black;
-} */
 
 .button-rounded-yellow {
   padding: 1rem;
@@ -155,7 +113,6 @@
   background: linear-gradient(#e1ae5b, #f5ab29);
   font-weight: bold;
   font-family: "Montserrat", Arial;
-
   position: relative;
   overflow: hidden;
 }
@@ -189,4 +146,119 @@
 .waiting-text {
   font-size: 1.5rem;
   margin-top: 3rem;
+}
+
+.content-mobile {
+  display: none;
+}
+
+/* Mobile Responsive Design */
+@media (max-width: 1000px) {
+  body {
+    max-height: 100dvh;
+    overflow-y: hidden;
+  }
+  .content-main {
+    flex-direction: column;
+    gap: 2rem;
+    padding: 1rem;
+  }
+
+  .content-main-left,
+  .content-main-right {
+    flex-basis: 100%;
+    padding: 1rem;
+  }
+
+  .content-main-center {
+    flex-basis: 100%;
+    width: 90%;
+  }
+
+  .content-main-right img,
+  .content-main-left img {
+    width: 6rem;
+  }
+
+  .main-container {
+    width: 90%;
+  }
+
+  .countdown-timer {
+    padding: 0rem 2rem;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  #time-left {
+    font-size: 1rem;
+  }
+
+  .time-box {
+    padding: 0;
+    margin: 0;
+  }
+
+  .time {
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+    width: 4rem;
+    height: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 0.5rem;
+  }
+
+  #time-left {
+    font-size: 1.2rem;
+  }
+
+  #register-button {
+    margin-top: -2rem;
+    margin-bottom: 0rem;
+    width: 10rem;
+  }
+  #get-ready-to-register,
+  .waiting-text {
+    margin-top: 2rem;
+    font-size: 1rem;
+  }
+  .label {
+    padding: 0;
+    font-size: 0.6rem;
+  }
+
+  .button-rounded-yellow {
+    width: 100%;
+    text-align: center;
+  }
+
+  .content-main-right img,
+  .content-main-left img {
+    margin-top: -2rem;
+    width: 3rem;
+  }
+
+  .content-main-left,
+  .content-main-right {
+    width: 50%;
+  }
+
+  .content-main-left #be-heard,
+  .content-main-right #vote-now {
+    font-size: 0.7rem;
+  }
+
+  .content-mobile {
+    margin-top: -rem;
+    display: flex;
+    order: 4;
+    align-items: start;
+  }
+
+  .no-mobile {
+    display: none;
+  }
 }
