--- a/views/voter/verify-otp.ejs
+++ b/views/voter/verify-otp.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style></style>
     <title>TANIKALA Voting System - OTP Verification</title>
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
